# prepbench

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
agents/: __init__.py  clarifier_agent.py  clarify_agent.py  code_agent.py  flow_agent.py  prep_agent.py  profile_agent.py
agents/prompts/: clarify_agent.yaml  code_agent.yaml  flow_agent.yaml  prep_agent.yaml  profile_agent.yaml  profile_agent_decide.yaml  profile_agent_summarize.yaml
config/: config_loader.py  experiment.yaml  experiment_config.py  llm.yaml  settings.yaml
core/: case_assets.py  data_head.py  executor.py  orchestrator.py  prompt_loader.py  structured_outlines.py  text_utils.py
core/orchestration/: __init__.py  clarify_parse.py  code_phase.py  common.py  flow_phase.py  mode_spec.py  profile_phase.py
core/schemas/: base.py  clarifier.py  user_simulator.py
core/templates/: solve_template.py.j2
core/utils/: code.py  (+5 more)
data/: case_links.txt
data_synthesis/: config.py  json_valid.py  run.py
docs/: ARCHITECTURE.md  BYOA_E2E.md  REPRO.md
draw/: plot_statistics.py  plot_style.py  rq2_plot.py  rq4_plot.py
evaluate/: README.md  __init__.py  batch.py  config.py  evaluator.py
llm_connect/: README.md  __init__.py  config.py  openrouter_client.py  providers.py  usage_tracker.py  utils.py
methods/: __init__.py
py2flow/: AGENTS.md  README.md  api.py  executor.py  flow.schema.json  ir.py
scripts/: run_disamb.sh  run_disamb_only.sh  run_e2e.sh  run_flow.sh  run_interact.sh  run_orig.sh  run_prepagent.sh
simulator/: README.md  __init__.py  local_api.py  user_simulator.py
(+2633 files in other folders)
