[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prepbench"
version = "0.0.0"
description = "Ambiguity analysis and auto-ETL experiment runner"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "Jinja2>=3.1",
  "numpy>=1.25",
  "outlines>=0.0.0",
  "pandas>=2.1",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "requests>=2.31",
  "tqdm>=4.67.2",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = [
  "prepbench",
  "prepbench.agents",
  "prepbench.config",
  "prepbench.core",
  "prepbench.evaluate",
  "prepbench.llm_connect",
  "prepbench.py2flow",
  "prepbench.simulator",
  "prepbench.data_synthesis",
  "agents",
  "config",
  "core",
  "core.schemas",
  "data_synthesis",
  "evaluate",
  "llm_connect",
  "py2flow",
  "py2flow.operators",
  "simulator",
]

[tool.setuptools.package-dir]
prepbench = "src/prepbench"
